Update plugin metadata and add smiley icon to header
Enhanced plugin description and tags to highlight support for animated GIFs. Updated HeaderPanel to display a resized smiley icon next to the title label with a tooltip.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Custom Emoji
 author=LouisHong
-description=Load custom emoji for your chat
-tags=emoji,chat,message,custom,icon,emote,text,clan,notification,sound,alert,twitch
+description=Add custom emoji and animated GIFs to your chat!
+tags=alert,animated,chat,clan,custom,emoji,emote,gif,icon,image,message,notification,png,reaction,sound,text,twitch
 plugins=com.customemoji.CustomEmojiPlugin
